--- a/about_me/wwr/styles/site-plan-rafting.css
+++ b/about_me/wwr/styles/site-plan-rafting.css
@@ -16,13 +16,13 @@ Fonts are separated by a & */
   --paragraph-font: Roboto Condensed;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #03045E;  /* headlines on a white background */ 
+  --headline-color-on-white: #0077B6;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
   --paragraph-color-on-white: #0077B6; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #0077B6  ;
   --nav-link-color: #0077B6;
-  --nav-background-color: #03045E;
+  --nav-background-color: white;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #00B4d8;
 }
