--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,24 +1,30 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Skranji&display=swap');
 
 #content {
     max-width: 1600px;
     margin: 0 auto;
     text-align: center;
+    font-family: Skranji;
+    font-size: 22px;
 
          }
 .logo {
     width : 80px;
+    
+   
 
 }
 a {
     text-decoration: none;
   }
-  
+
 nav a{  
     margin : 0 auto;
     text-align: center;
     color: #fcfbfb;
     text-decoration: none;
+    padding: 35px;
 
          }
 
@@ -45,6 +51,8 @@ main section {
 
 body {
         background-color: #fcfbfb; 
+        margin: 0;
+        padding: 0;
         }
 
 header {
@@ -56,6 +64,9 @@ nav a:hover {
 
 .book, .join{ 
     background-color: #1a79ac;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 
 }
 .book:hover, .join:hover {
@@ -65,6 +76,8 @@ nav a:hover {
 
 .msg{
     background-color: #1a79ac;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer{
     background-color: #1a79ac;
@@ -81,3 +94,52 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 }    
+footer {
+    background-color: steelblue;
+    color: white;
+    font-family: Skranji;
+    font-size: 22px;
+    padding: 25px 50px;
+    margin-top: 200px;
+}
+
+.home-title {
+    font-family: Roboto condensed;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+h2 {
+    margin: 0;
+}
+
+#logo_link  { 
+    padding-top: 5px;
+}
+
+.icon   {
+    padding-top: 10px;
+
+}
+
+.msg p  {
+     padding-bottom: 15px;
+    
+    }
+
+footer .social img  {
+    padding-top: 15px;
+
+}
+
+.rivers-card, .camping-card, .rapids-card   {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid black  
+}
+
+main section img {
+    box-sizing: border-box;
+}
