--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -22,7 +22,7 @@ a {
 nav a{  
     margin : 0 auto;
     text-align: center;
-    color: #fcfbfb;
+    color: #1a79ac;
     text-decoration: none;
     padding: 35px;
 
@@ -98,7 +98,7 @@ footer {
     background-color: steelblue;
     color: white;
     font-family: Skranji;
-    font-size: 22px;
+    font-size: 10px;
     padding: 25px 50px;
     margin-top: 200px;
 }
@@ -132,9 +132,6 @@ footer .social img  {
 
 }
 
-.rivers-card, .camping-card, .rapids-card   {
-    margin: 200px 0;
-}
 
 .card-img {
     border: 10px solid black  
@@ -148,3 +145,166 @@ main section img {
     padding: 30px;
     
 }
+
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+    justify-self: center; 
+    align-self: center;
+
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+
+           
+}
+#hero-msg h4 {
+    color: white;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card {grid-column: 2/4;
+    grid-row: 2/3}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+    }
+
+.rapids-card {grid-column:  8/10;
+     grid-row: 2/3;
+    }
+
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+}
+
+.msg {
+    grid-column: 6/10;
+    grid-row: 6/7;
+}
+
+footer {
+    background-color: #6f7364;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.msg {
+    background-color: #6f7364;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+ #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
