--- a/my_project/my_styles.css/site-plan.css
+++ b/my_project/my_styles.css/site-plan.css
@@ -5,25 +5,25 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #EF476F   ;
+  --secondary-color: #FFD166 ;
+  --accent1-color: #06D6A0;
+  --accent2-color: #118AB2;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --headline-color-on-white: #118AB2;  /* headlines on a white background */ 
+  --headline-color-on-color: #EF476F; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #06D6A0; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
+  --paragraph-background-color: #06D6A0  ;
+  --nav-link-color: #EF476F;
+  --nav-background-color: #FFD166;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --nav-hover-background-color: #118AB2;
 }
 
 
