--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -12,8 +12,7 @@
 .logo {
     width : 80px;
     
-   
-
+ 
 }
 a {
     text-decoration: none;
@@ -40,10 +39,6 @@ nav a{
 
          }
 
-main section {
-        margin: 0 auto;
-        }
-
 #background {
             height: 725px;
             background-color: #1a79ac;
@@ -56,8 +51,14 @@ body {
         }
 
 header {
-            background-color:#fcfbfb;
+        background-color:#fcfbfb;
+        display: grid;
+        grid-template-columns: 150px auto;
+        justify-self: center; 
+        align-self: center;
+
      }
+
 nav a:hover {
             background-color: #1a79ac;
         }
@@ -113,8 +114,10 @@ h2 {
     margin: 0;
 }
 
-#logo_link  { 
+#logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .icon   {
@@ -133,25 +136,10 @@ footer .social img  {
 }
 
 
-.card-img {
-    border: 10px solid black  
-}
+
 
 main section img {
     box-sizing: border-box;
-}
-
-.mountains{
-    padding: 30px;
-    
-}
-
-header {
-    display: grid;
-    grid-template-columns: 150px auto;
-    justify-self: center; 
-    align-self: center;
-
 }
 
 nav {
@@ -159,16 +147,14 @@ nav {
     justify-content: space-around;
 }
 
-#logo_link {
-    padding-top: 5px;
-    justify-self: center;
-    align-self: center;
-}
 
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 2(1fr);
+    margin-top: -100px; 
 }
+
 #hero-box {
     grid-column: 1/4;
     grid-row: 1/3;
@@ -179,11 +165,6 @@ nav {
 #hero-msg h4 {
     color: white;
 }
-#hero {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -100px; 
-}
 
 #hero-msg {
     grid-column: 2/3;
@@ -191,33 +172,34 @@ nav {
     margin-top: 100px;
 }
 
+main section {
+    display: grid;
+    grid-template-columns: 10(1 fr);
+    
+    }
+
 .card-img, .mountains {
-    width: 100%;
+    width: 100px;
 }
-.rivers-card {grid-column: 2/4;
-    grid-row: 2/3}
 
-.camping-card {
-    grid-column: 5/7;
-    grid-row: 2/3;
-    }
-
-.rapids-card {grid-column:  8/10;
-     grid-row: 2/3;
-    }
 
 #background {
     grid-column: 1/11;
-    grid-row: 4/9}
-
-.mountains {
-    grid-column: 2/7;
-    grid-row: 5/8;
+    grid-row: 4/9
 }
 
 .msg {
+    background-color: #6f7364;
+    padding: 35px;
     grid-column: 6/10;
     grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 footer {
@@ -232,10 +214,12 @@ footer {
     border: 10px solid #d9c2a3;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
-}
-.card-img:hover {
-    opacity: .6;
-    transform: scale(1.1);
+    width: 100px; 
+    height: 100px;
+    grid-column: 5/7;
+    grid-row: 2/3;
+        
+    
 }
 .msg {
     background-color: #6f7364;
@@ -250,43 +234,49 @@ footer {
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #6f7364;
 }
- #hero, .home-grid {
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+#hero, .home-grid {
         display: block;
         height: auto;
     }
-    nav, footer {
+nav, footer {
         flex-direction: column;
     }
-    nav a {
+nav a {
         display: block;
         padding: 15px;
     }
-    #hero {
+#hero {
         margin-top: 0;
     }
-    #hero-msg {
+#hero-msg {
         margin-top: 0;
     }
-    #hero-msg h4 {
+#hero-msg h4 {
         display: none;
     }
-    .home-title {
+.home-title {
         font-size: 25px;
         color: #6f7364;
     }
-    .rivers-card, .camping-card, .rapids-card { 
+.rivers-card, .camping-card, .rapids-card { 
         margin: 50px auto;
         width: 60%;
     }
-    #background {
+#background {
         display: none;
     }
-    .mountains, .msg {
+.mountains, .msg {
         width: 80%;
         display: block;
         margin: 0 auto;
     }
-    footer {
+footer {
         margin-top: 25px;
     }
 
