--- a/my_project/my_styles.css/site-plan.css
+++ b/my_project/my_styles.css/site-plan.css
@@ -7,10 +7,10 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #EF476F   ;
-  --secondary-color: #FFD166 ;
-  --accent1-color: #06D6A0;
-  --accent2-color: #118AB2;
+  --primary-color: #7209b7   ;
+  --secondary-color: #3a0ca3 ;
+  --accent1-color: #f72585;
+  --accent2-color: #4361ee;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
@@ -18,14 +18,14 @@ Fonts are separated by a | */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #118AB2;  /* headlines on a white background */ 
-  --headline-color-on-color: #EF476F; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #EF476F; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #06D6A0  ;
+  --headline-color-on-color: #f72585; /* headlines on a colored background */ 
+  --paragraph-color-on-white: ; /* paragraph text on a white background */ 
+  --paragraph-color-on-color:#3a0ca3; /* paragraph text on a colored background */ 
+  --paragraph-background-color: white  ;
   --nav-link-color: #EF476F;
-  --nav-background-color: #FFD166;
+  --nav-background-color: #7209b7;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #118AB2;
+  --nav-hover-background-color: #7209b7;
 }
 
 
@@ -45,7 +45,7 @@ img {
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Joti One;
-  color: #118AB2;
+  color: #7209b7;
 }
 h2 {
   text-align: center;
@@ -53,21 +53,21 @@ h2 {
 hr {
   height: 3px;
   margin: 35px 0;
-  background: #06D6A0;
+  background: #3a0ca3;
 }
 header {
   padding: 1em;
   text-align: center;
-  color: #EF476F;
-  background-color: #06D6A0 ;
+  color: #7209b7;
+  background-color: #118AB2;
 }
 header > h1, header > h2 {
-  color: #EF476F;
+  color: #7209b7;
 }
 
 p {
   font-family: Ubuntu;
-  color: #06D6A0 ;
+  color: #3a0ca3 ;
   padding: 1em;
 }
 .colors {
@@ -86,21 +86,21 @@ p {
 
 
 .primary {
-  background-color: #EF476F;
+  background-color: #7209b7;
 }
 .secondary {
-  background-color: #FFD166;
+  background-color:  #118AB2;
 }
 .accent1 {
-  background-color: #06D6A0;
+  background-color: #f72585;
 }
 .accent2{
   background-color: #118AB2;
 }
 
 p.colored {
-  background-color: #06D6A0;;
-  color: #FFD166;
+  background-color: #118AB2;
+  color: #7209b7;
 }
 
 nav {
@@ -122,7 +122,7 @@ nav a {
 
 }
 nav a:link, nav a:visited {
-  color: #EF476F;
+  color:#7209b7;
 }
 nav a:hover {
   color: #EF476F;
