--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -66,7 +66,7 @@ nav a:hover {
 .book, .join{ 
     background-color: #1a79ac;
     padding: 15px 30px;
-    margin-top: 50px;
+    margin-top: 25px;
     border-radius: 5px;
 
 }
@@ -146,12 +146,16 @@ nav {
     display: flex;
     justify-content: space-around;
 }
-
+.home-grid {
+    display: grid;
+    grid-template-columns: 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px ;
+    grid-template-rows: 50px, 150px, 50px, 50px, 25px, 100px, 35px, 35px, 50px;
+    height: auto;
+}
 
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 2(1fr);
     margin-top: -100px; 
 }
 
@@ -170,6 +174,7 @@ nav {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
+    
 }
 
 main section {
@@ -178,14 +183,20 @@ main section {
     
     }
 
-.card-img, .mountains {
+.camping-card {
+    width: 100%;
+    
+
+}
+
+ .mountains {
     width: 100px;
 }
 
 
 #background {
     grid-column: 1/11;
-    grid-row: 4/9
+    grid-row: 4/9;
 }
 
 .msg {
@@ -195,12 +206,7 @@ main section {
     grid-row: 6/7;
     box-shadow: 5px 5px 10px #6f7364;
 }
-.mountains {
-    width: 100%;
-    grid-column: 2/7;
-    grid-row: 5/8;
-    box-shadow: 5px 5px 10px #6f7364;
-}
+
 
 footer {
     background-color: #6f7364;
@@ -210,15 +216,26 @@ footer {
     justify-content: space-around;
     align-items: center;
 }
-.card-img {
-    border: 10px solid #d9c2a3;
-    transition: transform .5s;
-    box-shadow: 5px 5px 10px #6f7364;
-    width: 100px; 
-    height: 100px;
+
+.rivers-card {
+    
+    grid-column: 2/4;
+    grid-row: 2/3;
+
+}
+.rapids-card {
+    
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+
+.camping-card {
+    
     grid-column: 5/7;
     grid-row: 2/3;
-        
+
+       
     
 }
 .msg {
@@ -240,10 +257,6 @@ footer {
     transform: scale(1.1);
 }
 
-#hero, .home-grid {
-        display: block;
-        height: auto;
-    }
 nav, footer {
         flex-direction: column;
     }
@@ -265,8 +278,8 @@ nav a {
         color: #6f7364;
     }
 .rivers-card, .camping-card, .rapids-card { 
-        margin: 50px auto;
-        width: 60%;
+        margin: 100px auto;
+        width: 100%;
     }
 #background {
         display: none;
