--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -215,6 +215,7 @@ footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 100%;
 }
 
 .rivers-card {
@@ -294,6 +295,57 @@ footer {
     }
 
 
+        
+.rivers-grid {
+       display: grid;
+       grid-template-columns: 10 (1fr);
+       grid-template-rows: 10 (1fr);
+       height: auto;
+
+}
+
+.rafting1{
+    grid-column: 1/6;
+    grid-row: 1/5;
+    width : 100% ;
+    
+    background-color: #6f7364;
+    padding: 35px;
+    box-shadow: 5px 5px 10px #6f7364;
+
+
+}
+
+.rafting2{
+    grid-column: 6/11;
+    grid-row: 1/5;
+    width : 100% ;
+    background-color: #6f7364;
+    padding: 35px;
+    box-shadow: 5px 5px 10px #6f7364;
+     
+}
+
+.rafting3 {
+    grid-column: 1/11;
+    grid-row: 6/9;
+    width: 100% ;
+    
+    background-color: #6f7364;
+    padding: 35px;
+    box-shadow: 5px 5px 10px #6f7364;
+
+}
+
+.rafting4 {
+    grid-column: 1/11;
+    grid-row: 9/11;
+    width: 100% ;
+    
+    background-color: #6f7364;
+    padding: 35px;
+    box-shadow: 5px 5px 10px #6f7364;
+}
 
 
 
