--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -24,6 +24,8 @@ nav a{
     color: #1a79ac;
     text-decoration: none;
     padding: 35px;
+    font-family: Skranji;
+    font-size: 22px;
 
          }
 
