--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -107,7 +107,7 @@ footer {
 }
 
 .home-title {
-    font-family: Roboto condensed;
+    font-family: Roboto Condensed;
     font-size: 2em;
     margin-top: 10px;
 }
@@ -415,19 +415,7 @@ form {
     margin-left: 0.5em;
   }
 
-  #feedback {
-    background-color: antiquewhite;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: .5em;
-    /* make this element invisible until we are ready for it */
-    display: none;      
-}
-.moveDown {
-    margin-top: 3em;
-}
+  
 
 
 
