--- a/my_project/my_styles.css/ourstyles.css
+++ b/my_project/my_styles.css/ourstyles.css
@@ -6,11 +6,11 @@ Fonts are separated by a | */
 
 
 header {
-    background-color: #43eee0;
+    background-color: wheat;
     max-width: 100%;
     display: grid;
     grid-template-columns: 200px auto;
-    
+    font-family: Ubuntu;
     align-items: center;
 }
 
@@ -25,6 +25,7 @@ header {
 
 .logo {
     width : 200px;
+
 
 }
 
@@ -42,9 +43,10 @@ nav a {
 
 }
 
-#headline1 h1{
+.headline1 {
     text-align:  center;
     margin: 0 auto;
+    font-family: Ubuntu;
      
 }
 
@@ -59,7 +61,7 @@ nav a:hover {
     grid-template-rows: 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px ;
     height: auto;
     background-color: #4361ee;
-    margin-top : 20px;
+    margin-top : 10px;
     padding: 25px;
 
 }
@@ -78,6 +80,8 @@ nav a:hover {
     padding: 20px;
     align-items: center;
     text-align: center;
+    font-family: Joti One;
+    border-radius: 50px;
     
 }
 
@@ -99,12 +103,12 @@ nav a:hover {
 }
 
 footer {
-    background-color: #4361ee;
+    background-color: gray;
     color: black;
     font-family: Joti One;
     font-size: 10px;
     padding: 25px 50px;
-    margin-top: 20px;
+    margin-top: 10px;
     text-align: center;
     
 }
@@ -129,4 +133,99 @@ footer p a:hover {
 .social img{
     width : 50px;
 }
+#stuffs{
+    align-items: center;
+    text-align: center;
+    font-family: Ubuntu;
+    font-size: 1.5em;
+    background-color:wheat;
+}
 
+#stuffs img{
+    width: 600px;
+    height: 500px;
+    border-radius: 50px;
+    
+}
+
+#vaults{
+    align-items: center;
+    text-align: center;
+    font-family: Ubuntu;
+    font-size: 1.5em;
+    background-color:wheat;
+}
+#vaults img{
+    width: 600px;
+    height: 500px;
+    border-radius: 50px;
+}
+form {
+    /* Center the form on the page */
+    margin: 0 auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+    font-family: Ubuntu;
+    font-size: 1.5em;
+    background-color:wheat;
+    margin-top: 10px;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  form li + li {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+  
+  input,
+  textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em sans-serif;
+  
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Match form field borders */
+    border: 1px solid #999;
+  }
+  
+  input:focus,
+  textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000;
+  }
+  
+  textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+  
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+  .button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+  }
+  
+  button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: 0.5em;
+  }
