--- a/my_project/my_styles.css/ourstyles.css
+++ b/my_project/my_styles.css/ourstyles.css
@@ -9,7 +9,7 @@ header {
     background-color: wheat;
     max-width: 100%;
     display: grid;
-    grid-template-columns: 200px auto;
+    grid-template-columns: 300px auto;
     font-family: Ubuntu;
     align-items: center;
 }
@@ -55,10 +55,10 @@ nav a:hover {
 }
 
 
-#container {
+.container {
     display: grid;
-    grid-template-columns: 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px ;
-    grid-template-rows: 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px ;
+    grid-template-columns: 20% 60% 20% ;
+    grid-template-rows: 10% 20% 20% 20% 20% 10% ;
     height: auto;
     background-color: #4361ee;
     margin-top : 10px;
@@ -67,38 +67,56 @@ nav a:hover {
 }
 
 .headline{
-    grid-column: 5/9;
-    grid-row: 1/2;
+    
     text-align: center;
     font-family: Ubuntu;
     font-size: 1.2em;
 }
 
 .my_theme {
-    grid-column: 5/9;
-    grid-row: 2/7;
+    grid-template-columns: 2/3;
+    grid-template-rows: 2/6;
     padding: 20px;
     align-items: center;
     text-align: center;
-    font-family: Joti One;
+    font-family: Ubuntu;
     border-radius: 50px;
+    width: 80%;
+    margin-right: 0 auto;
     
 }
+.my_theme img{
+    grid-template-columns: 2/3;
+    grid-template-rows: 2/6;
+    align-items: center;
+    }
 
-.homepage1 p1{
-    grid-column: 1/5;
-    grid-row: 2/7;
+.homepage1{
+    grid-template-columns: 3/4;
+    grid-template-rows: 2/6;
+    text-align: left;
+    font-family: Ubuntu;
+}
+.homepage1 p{
+    
+    font-size: 1.2em;
+    font-family: Ubuntu;
+    text-align: right;
+    
+
+}
+.homepage2{
+    grid-template-columns: 1/2;
+    grid-template-rows: 2/6;
+    font-family: Ubuntu;
+
+}
+
+.homepage2 p {
+    
     font-size: 1.2em;
     font-family: Ubuntu;
     
-
-}
-
-.homepage2 p2 {
-    grid-column: 9/13;
-    grid-row: 2/9;
-    font-size: 1.2em;
-    font-family: Ubuntu;
     
 }
 
@@ -125,10 +143,14 @@ footer .social img  {
 
 footer p a:hover {
     text-decoration: underline;
-    text-decoration-color: none;
     text-decoration-color: blue;
 }
 
+footer h4{
+    font-size: 2.8em;
+
+    
+}
 
 .social img{
     width : 50px;
