--- a/my_project/my_styles.css/ourstyles.css
+++ b/my_project/my_styles.css/ourstyles.css
@@ -57,14 +57,17 @@ nav a:hover {
 
 .container {
     display: grid;
-    grid-template-columns: 20% 60% 20% ;
+    grid-template-columns: 20% 10% 20% 20% 10% 20%;
     grid-template-rows: 10% 20% 20% 20% 20% 10% ;
     height: auto;
     background-color: #4361ee;
     margin-top : 10px;
     padding: 25px;
+  
 
 }
+
+
 
 .headline{
     
@@ -74,32 +77,34 @@ nav a:hover {
 }
 
 .my_theme {
-    grid-template-columns: 2/3;
-    grid-template-rows: 2/6;
+    grid-template-columns: 3/5;
+    grid-template-rows: 2/5;
     padding: 20px;
     align-items: center;
     text-align: center;
     font-family: Ubuntu;
     border-radius: 50px;
-    width: 80%;
-    margin-right: 0 auto;
+    width: 1200px;
+    margin: 0 auto;
+    
     
 }
 .my_theme img{
-    grid-template-columns: 2/3;
-    grid-template-rows: 2/6;
+    width: 1000px;
+    grid-template-columns: 3/5;
+    grid-template-rows: 2/5;
     align-items: center;
     }
 
 .homepage1{
-    grid-template-columns: 3/4;
-    grid-template-rows: 2/6;
+    grid-template-columns: 1/3;
+    grid-template-rows: 2/5;
     text-align: left;
     font-family: Ubuntu;
 }
 .homepage1 p{
     
-    font-size: 1.2em;
+    font-size: 1.6em;
     font-family: Ubuntu;
     text-align: right;
     
@@ -113,8 +118,9 @@ nav a:hover {
 }
 
 .homepage2 p {
-    
-    font-size: 1.2em;
+    grid-template-columns: 1/2;
+    grid-template-rows: 2/6;
+    font-size: 1.6em;
     font-family: Ubuntu;
     
     
@@ -215,22 +221,74 @@ form {
   
   input,
   textarea {
-    /* To make sure that all text fields have the same font settings
-       By default, textareas have a monospace font */
-    font: 1em sans-serif;
+    
+  body {
+  margin: 0;
+  font-family: Ubuntu;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: wheat;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+styles {
+  align-content: right;
+}
   
-    /* Uniform text field size */
-    width: 300px;
-    box-sizing: border-box;
-  
-    /* Match form field borders */
-    border: 1px solid #999;
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
-  
-  input:focus,
-  textarea:focus {
+}
+
+
+  .topnav  .responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    max-width: 600px;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+    
+    
+
+  textarea {
     /* Additional highlight for focused elements */
     border-color: #000;
+    font: 1em;
+    font-family: Ubuntu;
+    border: 1px solid
+  
   }
   
   textarea {
@@ -251,3 +309,79 @@ form {
        between the labels and their text fields */
     margin-left: 0.5em;
   }
+
+  
+  body {
+    background-color: wheat;
+  }
+  
+  #regForm {
+    background-color: wheat;
+    margin: 100px auto;
+    font-family: Raleway;
+    padding: 40px;
+    width: 70%;
+    min-width: 300px;
+  }
+  
+  h1 {
+    text-align: center;  
+  }
+  
+  input {
+    padding: 10px;
+    width: 100%;
+    font-size: 17px;
+    font-family: Raleway;
+    border: 1px solid #aaaaaa;
+  }
+  
+  /* Mark input boxes that gets an error on validation: */
+  input.invalid {
+    background-color: #ffdddd;
+  }
+  
+  /* Hide all steps by default: */
+  .tab {
+    display: none;
+  }
+  
+  button {
+    background-color: #7209b7;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 17px;
+    font-family: Raleway;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    opacity: 0.8;
+  }
+  
+  #prevBtn {
+    background-color: #bbbbbb;
+  }
+  
+  /* Make circles that indicate the steps of the form: */
+  .step {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbbbbb;
+    border: none;  
+    border-radius: 50%;
+    display: inline-block;
+    opacity: 0.5;
+  }
+  
+  .step.active {
+    opacity: 1;
+  }
+  
+  /* Mark the steps that are finished and valid: */
+  .step.finish {
+    background-color:#7209b7;
+  }
+  
