--- a/my_project/my_styles.css/ourstyles.css
+++ b/my_project/my_styles.css/ourstyles.css
@@ -6,7 +6,7 @@ Fonts are separated by a | */
 
 
 header {
-    background-color: wheat;
+    background-color:#f2f2f2;
     max-width: 100%;
     display: grid;
     grid-template-columns: 300px auto;
@@ -77,8 +77,8 @@ nav a:hover {
 }
 
 .my_theme {
-    grid-template-columns: 3/5;
-    grid-template-rows: 2/5;
+    grid-column: 3/5;
+    grid-row: 2/5;
     padding: 20px;
     align-items: center;
     text-align: center;
@@ -91,14 +91,14 @@ nav a:hover {
 }
 .my_theme img{
     width: 1000px;
-    grid-template-columns: 3/5;
-    grid-template-rows: 2/5;
+    grid-column: 3/5;
+    grid-row: 2/5;
     align-items: center;
     }
 
 .homepage1{
-    grid-template-columns: 1/3;
-    grid-template-rows: 2/5;
+    grid-column: 1/3;
+    grid-row: 2/5;
     text-align: left;
     font-family: Ubuntu;
 }
@@ -111,15 +111,15 @@ nav a:hover {
 
 }
 .homepage2{
-    grid-template-columns: 1/2;
-    grid-template-rows: 2/6;
+    grid-column: 1/2;
+    grid-row: 2/6;
     font-family: Ubuntu;
 
 }
 
 .homepage2 p {
-    grid-template-columns: 1/2;
-    grid-template-rows: 2/6;
+    grid-column: 1/2;
+    grid-row: 2/6;
     font-size: 1.6em;
     font-family: Ubuntu;
     
@@ -127,8 +127,8 @@ nav a:hover {
 }
 
 footer {
-    background-color: gray;
-    color: black;
+    background-color:#ddd;
+    color: #7209b7;
     font-family: Joti One;
     font-size: 10px;
     padding: 25px 50px;
@@ -149,7 +149,7 @@ footer .social img  {
 
 footer p a:hover {
     text-decoration: underline;
-    text-decoration-color: blue;
+    text-decoration-color:#f72585;
 }
 
 footer h4{
@@ -162,20 +162,57 @@ footer h4{
     width : 50px;
 }
 #stuffs{
+    display: grid;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-rows: 10% 20% 30% 20% 20%;
     align-items: center;
     text-align: center;
     font-family: Ubuntu;
     font-size: 1.2em;
     background-color:#4cc9f0;
+    
 }
 
 #stuffs img{
-    width: 600px;
-    height: 500px;
+    grid-column: 1/4;
+    grid-row: 2/4;
+    width: 98%;
+    height: 700px;
     border-radius: 50px;
     margin-right: 50px;
     margin-bottom: 15px;
-        
+    margin-top: 90px;
+    margin-left: 15px;
+}
+
+#stuffs  h1 {
+    grid-column: 2/3 ;
+    grid-row: 1/2;
+    text-align: center;
+    color:#7209b7
+
+
+}
+#stuffs p1 {
+    grid-column:1/2 ;
+    grid-row: 4/6;
+    text-align: center;
+    color :#7209b7;
+}      
+
+#stuffs p2 {
+    grid-column: 2/3;
+    grid-row: 4/6;
+    text-align: center;
+    color :#7209b7
+
+}
+
+#stuffs p3{
+    grid-column: 3/4;
+    grid-row: 4/6;
+    text-align: center;
+    color :#7209b7
 }
 
 #vaults{
@@ -221,12 +258,12 @@ form {
     text-align: right;
   }
   
-  input,
-  textarea {
+  
     
-  body {
+body {
   margin: 0;
   font-family: Ubuntu;
+
 }
 
 .topnav {
@@ -266,7 +303,7 @@ styles {
     float: right;
     display: block;
   }
-}
+
 
 
   .topnav  .responsive .icon {
