--- a/my_project/my_styles.css/ourstyles.css
+++ b/my_project/my_styles.css/ourstyles.css
@@ -220,17 +220,79 @@ footer h4{
 }
 
 #vaults{
+    display: grid;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-rows: 10% 30% 20% 20% 20%;
     align-items: center;
     text-align: center;
     font-family: Ubuntu;
     font-size: 1.2em;
-    background-color:wheat;
+    background-color:#4361ee;
 }
-#vaults img{
-    width: 600px;
-    height: 500px;
-    border-radius: 50px;
+
+#vaults h3{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    
 }
+
+.washer{
+  grid-column:1/2 ;
+  grid-row: 2/4;
+  width: 100%;
+  margin-top: 60px;
+  height: 550px;
+  border-radius: 20px;
+  margin-top: 100px;
+  margin-bottom: 60px;
+
+
+
+}
+
+.generator{
+  grid-column:2/3 ;
+  grid-row: 2/4;
+  width: 100%;
+  margin-top: 60px;
+  height: 550px;
+  border-radius: 20px;
+  margin-top: 100px;
+  margin-bottom: 60px;
+
+
+}
+
+.freezer{
+  grid-column:3/4 ;
+  grid-row:2/4 ;
+  width: 100%;
+  margin-top: 60px;
+  height: 550px;
+  border-radius: 20px;
+  margin-top: 100px;
+  margin-bottom: 60px;
+
+
+
+}
+
+
+#vaults p1{
+  grid-column: 1/2;
+  grid-row: 4/6 ;
+}
+
+#vaults p2{
+  grid-column:2/3 ;
+  grid-row: 4/6;
+}
+
+#vaults p3{
+  grid-column: 3/4;
+  grid-row: 4/6;
+}
+
 form {
     /* Center the form on the page */
     margin: 0 auto;
@@ -299,9 +361,6 @@ body {
   display: none;
 }
 
-styles {
-  align-content: right;
-}
   
   .topnav a.icon {
     float: right;
@@ -355,11 +414,11 @@ styles {
 
   
   body {
-    background-color: 4CC9F0;
+    background-color:#4361ee;
   }
   
   #regForm {
-    background-color: 4CC9F0;
+    background-color:#4361ee;
     margin: 100px auto;
     font-family: Raleway;
     padding: 40px;
@@ -369,7 +428,7 @@ styles {
   
   #regForm h1 {
     text-align: center;
-    background-color: 4CC9F0;
+    background-color:#4361ee;
 
   }
   
