--- a/my_project/my_styles.css/ourstyles.css
+++ b/my_project/my_styles.css/ourstyles.css
@@ -245,6 +245,7 @@ footer h4{
   border-radius: 20px;
   margin-top: 100px;
   margin-bottom: 60px;
+  margin-left: 5px;
 
 
 
@@ -272,6 +273,7 @@ footer h4{
   border-radius: 20px;
   margin-top: 100px;
   margin-bottom: 60px;
+  margin-right: 5px;
 
 
 
