--- a/my_project/my_styles.css/ourstyles.css
+++ b/my_project/my_styles.css/ourstyles.css
@@ -60,7 +60,7 @@ nav a:hover {
     grid-template-columns: 20% 10% 20% 20% 10% 20%;
     grid-template-rows: 10% 20% 20% 20% 20% 10% ;
     height: auto;
-    background-color: #4361ee;
+    background-color:#4cc9f0;
     margin-top : 10px;
     padding: 25px;
   
@@ -69,11 +69,14 @@ nav a:hover {
 
 
 
-.headline{
-    
+.container h1{
+    grid-column: 3/5;
+    grid-row: 1/2;
     text-align: center;
     font-family: Ubuntu;
-    font-size: 1.2em;
+    font-size: 1.6em;
+    color :#7209b7;
+
 }
 
 .my_theme {
@@ -81,50 +84,51 @@ nav a:hover {
     grid-row: 2/5;
     padding: 20px;
     align-items: center;
-    text-align: center;
-    font-family: Ubuntu;
+    
     border-radius: 50px;
-    width: 1200px;
+    width: 100%;
     margin: 0 auto;
     
     
 }
-.my_theme img{
-    width: 1000px;
-    grid-column: 3/5;
-    grid-row: 2/5;
-    align-items: center;
-    }
 
 .homepage1{
-    grid-column: 1/3;
+    grid-column: 5/7;
     grid-row: 2/5;
     text-align: left;
     font-family: Ubuntu;
+    color :#7209b7;
+    padding-left: 30px;
+    font-size: 1.3em
 }
+
 .homepage1 p{
     
     font-size: 1.6em;
     font-family: Ubuntu;
     text-align: right;
+    color :#7209b7;
+    padding-left: 15px;
     
 
 }
+
 .homepage2{
     grid-column: 1/2;
     grid-row: 2/6;
     font-family: Ubuntu;
-
+    color :#7209b7;
+    padding-left: 15px;
+    font-size: 1.3em
+  
 }
 
-.homepage2 p {
-    grid-column: 1/2;
-    grid-row: 2/6;
-    font-size: 1.6em;
-    font-family: Ubuntu;
+
+
+
     
     
-}
+
 
 footer {
     background-color:#ddd;
@@ -198,6 +202,8 @@ footer h4{
     text-align: center;
     color :#7209b7;
     margin-top: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
 }      
 /*
 #stuffs p2 {
@@ -300,7 +306,7 @@ footer h4{
 form {
     /* Center the form on the page */
     margin: 0 auto;
-    width: 800px;
+    width: 400px;
     /* Form outline */
     padding: 1em;
     border: 1px solid #ccc;
@@ -426,12 +432,14 @@ body {
   }
   
   #regForm {
+    grid-column: 3/5;
+    grid-row: 5/7;
     background-color:#4361ee;
-    margin: 100px auto;
-    font-family: Raleway;
+    margin: 0 auto;
+    font-family: Ubuntu;
     padding: 40px;
-    width: 70%;
-    min-width: 300px;
+    width: 100%;
+    
   }
   
   #regForm h1 {
@@ -444,7 +452,7 @@ body {
     padding: 10px;
     width: 100%;
     font-size: 17px;
-    font-family: Raleway;
+    font-family: Ubuntu;
     border: 1px solid #aaaaaa;
   }
   
@@ -464,7 +472,7 @@ body {
     border: none;
     padding: 10px 20px;
     font-size: 17px;
-    font-family: Raleway;
+    font-family: Ubuntu;
     cursor: pointer;
   }
   
